--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">appListaCurso</string>
+    <string name="text_titulo">Aplicativo Lista VIP Curso Android</string>
+    <string name="text_hint_edit_primeiro_nome">Primeiro Nome</string>
+    <string name="text_hint_sobrenome">Sobrenome</string>
+    <string name="text_hint_nome_do_curso">Nome do Curso desejado</string>
+    <string name="text_hint_telefone_de_contato">Telefone de contato</string>
+    <string name="text_button_limpar">LIMPAR</string>
+    <string name="text_button_salvar">SALVAR</string>
+    <string name="text_button_finalizar">FINALIZAR</string>
 </resources>
